--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,13 @@
         android:text="@string/send_notification_4"
         />
 
+    <Button
+        android:id="@+id/send_notification_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/send_notification_4"
+        android:layout_centerHorizontal="true"
+        android:text="@string/send_notification_5"
+        />
+
 </RelativeLayout>
